# HanziOCR

./: .gitignore  make_char_list.py  pyproject.toml  train_set_image_generation.py
scripts/: download_zh_wiki.py  make_char_csv.ipynb  make_char_list.py  train_set_image_generation.py
src/hanzi_ocr/: utils.py
