[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hanzi-ocr"
version = "0.0.2"

dependencies = [
    "numpy",
    "torchvision",
    "torch",
    "pandas",
    "pillow",
    "scipy",
    "fonttools",
    "datasets",
    "opencc"
]

requires-python = ">= 3.8"
description = "An OCR project for Chinese characters (Hanzi)"
readme = "README.md"